syntax = "proto3";

package serval.base;

message UpdateJobStatusRequest {
    string job_id = 1;
    int32 step = 2;
    optional double percent_completed = 3;
    optional string message = 4;
    optional int32 queue_depth = 5;
}

message JobStartedRequest {
    string job_id = 1;
}

message JobCompletedRequest {
    string job_id = 1;
    int32 corpus_size = 2;
    double confidence = 3;
}

message JobCanceledRequest {
    string job_id = 1;
}

message JobFaultedRequest {
    string job_id = 1;
    string message = 2;
}

message JobRestartingRequest {
    string job_id = 1;
}